...
              style={styles.secondaryButton}
              onPress={() => {
                router.replace('/');
              }}
            >
              <Text type='sm' color='gray' weight='semibold' align='center'>
                Go home
              </Text>
            </Button>
          </View>
        </BodyScrollView>
      </View>
    </>
...
