...
    // eslint-disable-next-line react-hooks/exhaustive-deps
  }, [stream]);

  return (
    <TouchableOpacity
      onPress={() => {
        navigate('Streams', {
          screen: 'LiveStream',
          params: {
            id: stream.user_login,
          },
        });
      }}
...
                testID="LiveStreamCard-avatar"
              />
              <Text preset="tag">{stream.user_name}</Text>
            </View>
            <Text preset="streamTitle">
              {new Intl.NumberFormat('en-US').format(stream.viewer_count)}{' '}
              viewers
            </Text>
          </View>
        </View>
      </View>

      <View style={{ marginTop: spacing.extraSmall }}>
...
